// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders col-auto 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(2, 1fr);
}

<div
  class="c0"
  data-class="grid-2"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Grid Col renders grid default 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(2, 1fr);
}

<div
  class="c0"
  data-class="grid-2"
  data-grid="grid"
>
  col
</div>
`;
